tests/baselines/reference/assignmentCompatBetweenTupleAndArray.errors.txt
assignmentCompatBetweenTupleAndArray.ts(12,1): error TS2322: Type '[number, string]' is not assignable to type '{}[]'.
  Type 'string | number' is not assignable to type '{}'.
    Type 'string' is not assignable to type '{}'.
assignmentCompatBetweenTupleAndArray.ts(13,1): error TS2322: Type '[number, number]' is not assignable to type '{}[]'.
  Type 'number' is not assignable to type '{}'.
assignmentCompatBetweenTupleAndArray.ts(14,1): error TS2322: Type '[number, {}]' is not assignable to type '{}[]'.
  Type 'number | {}' is not assignable to type '{}'.
    Type 'number' is not assignable to type '{}'.
assignmentCompatBetweenTupleAndArray.ts(17,1): error TS2322: Type '[number, string]' is not assignable to type 'number[]'.
  Type 'string | number' is not assignable to type 'number'.
    Type 'string' is not assignable to type 'number'.
assignmentCompatBetweenTupleAndArray.ts(18,1): error TS2322: Type '{}[]' is not assignable to type '[{}]'.
  Target requires 1 element(s) but source may have fewer.


==== assignmentCompatBetweenTupleAndArray.ts (5 errors) ====
    var numStrTuple: [number, string];
    var numNumTuple: [number, number];
    var numEmptyObjTuple: [number, {}];
    var emptyObjTuple: [{}];
    
    var numArray: number[];
    var emptyObjArray: {}[];
    
    // no error
    numArray = numNumTuple;
    emptyObjArray = emptyObjTuple;
    emptyObjArray = numStrTuple;
    ~~~~~~~~~~~~~
!!! error TS2322: Type '[number, string]' is not assignable to type '{}[]'.
!!! error TS2322:   Type 'string | number' is not assignable to type '{}'.
!!! error TS2322:     Type 'string' is not assignable to type '{}'.
    emptyObjArray = numNumTuple;
    ~~~~~~~~~~~~~
!!! error TS2322: Type '[number, number]' is not assignable to type '{}[]'.
!!! error TS2322:   Type 'number' is not assignable to type '{}'.
    emptyObjArray = numEmptyObjTuple;
    ~~~~~~~~~~~~~
!!! error TS2322: Type '[number, {}]' is not assignable to type '{}[]'.
!!! error TS2322:   Type 'number | {}' is not assignable to type '{}'.
!!! error TS2322:     Type 'number' is not assignable to type '{}'.
    
    // error
    numArray = numStrTuple;
    ~~~~~~~~
!!! error TS2322: Type '[number, string]' is not assignable to type 'number[]'.
!!! error TS2322:   Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    emptyObjTuple = emptyObjArray;
    ~~~~~~~~~~~~~
!!! error TS2322: Type '{}[]' is not assignable to type '[{}]'.
!!! error TS2322:   Target requires 1 element(s) but source may have fewer.
    